Switching to previous JavaCPP 1.5.11: new version does not work properly from cmd or from IDEA